添加只能选择终止值的功能

--- a/test/range_picker_test.html
+++ b/test/range_picker_test.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="mocha"></div>
-
+        <div id="range_picker_container"></div>
         <!-- mocha -->
         <script src="../bower_components/mocha/mocha.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" charset="utf-8">
@@ -25,8 +25,11 @@
         <!-- JQuery -->
         <script src="../bower_components/jquery/dist/jquery.js" type="text/javascript" charset="utf-8"></script>
 
+        <!-- RangePicker -->
+        <script src="../src/range_picker.js" type="text/javascript" charset="utf-8"></script>
+
         <!-- 测试脚本 -->
-        <script src="./spec/initSpec.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./spec/rangepickerSpec.js" type="text/javascript" charset="utf-8"></script>
 
         <script type="text/javascript" charset="utf-8">
             if (navigator.userAgent.indexOf('PhantomJS') < 0) {
