--- a/sample/sample.html
+++ b/sample/sample.html
@@ -7,9 +7,12 @@
         <link href="../css/range-picker.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <div class="wrapper" style="width: 300px; margin: 100px auto;">
+        <div class="wrapper" style="width: 400px; margin: 100px auto; padding: 40px;">
             <div id="date_range"></div>
             <div id="number_range" style="margin-top: 100px;"></div>
+
+            <div id="double_date_range" style="margin-top: 200px;"></div>
+            <div id="double_number_range" style="margin-top: 100px;"></div>
         </div>
 
         <script src="../bower_components/jquery/dist/jquery.js" type="text/javascript"></script>
