--- a/test/range_picker_test.html
+++ b/test/range_picker_test.html
@@ -5,10 +5,13 @@
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
         <title>RangePicker test</title>
         <link rel="stylesheet" href="../bower_components/mocha/mocha.css" type="text/css" charset="utf-8" />
+        <link rel="stylesheet" href="../css/range-picker.css" type="text/css" charset="utf-8" />
     </head>
     <body>
         <div id="mocha"></div>
-        <div id="range_picker_container"></div>
+        <div id="range_picker_container" style="width: 400px;">
+            <div id="range_picker"></div>
+        </div>
         <!-- mocha -->
         <script src="../bower_components/mocha/mocha.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" charset="utf-8">
@@ -24,6 +27,10 @@
 
         <!-- JQuery -->
         <script src="../bower_components/jquery/dist/jquery.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../bower_components/jquery-simulate-ext/libs/jquery.simulate.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../bower_components/jquery-simulate-ext/src/jquery.simulate.ext.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../bower_components/jquery-simulate-ext/src/jquery.simulate.drag-n-drop.js" type="text/javascript" charset="utf-8"></script>
+
 
         <!-- RangePicker -->
         <script src="../src/range_picker.js" type="text/javascript" charset="utf-8"></script>
