增加示例程序

--- a/sample/sample.html
+++ b/sample/sample.html
@@ -9,10 +9,14 @@
     <body>
         <div class="wrapper" style="width: 400px; margin: 100px auto; padding: 40px;">
             <div id="date_range"></div>
-            <div id="number_range" style="margin-top: 100px;"></div>
+            <div id="number_range" style="margin-top: 50px;"></div>
 
-            <div id="double_date_range" style="margin-top: 200px;"></div>
-            <div id="double_number_range" style="margin-top: 100px;"></div>
+            <div id="week_range" style="margin-top: 75px"> </div>
+            <div id="month_range" style="margin-top: 50px"> </div>
+
+            <div id="double_date_range" style="margin-top: 75px;"></div>
+            <div id="double_number_range" style="margin-top: 50px;"></div>
+
         </div>
 
         <script src="../bower_components/jquery/dist/jquery.js" type="text/javascript"></script>
